tests/baselines/reference/isolatedDeclarationErrors.errors.txt
isolatedDeclarationErrors.ts(2,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
isolatedDeclarationErrors.ts(5,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
isolatedDeclarationErrors.ts(7,30): error TS9507: Function must have an explicit type annotation with with --isolatedDeclarations
isolatedDeclarationErrors.ts(8,1): error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.


==== isolatedDeclarationErrors.ts (4 errors) ====
    function errorOnAssignmentBelowDecl(): void {}
    errorOnAssignmentBelowDecl.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    
    const errorOnAssignmentBelow = (): void => {}
    errorOnAssignmentBelow.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    
    const errorOnMissingReturn = () => {}
                                 ~~~~~~~~
!!! error TS9507: Function must have an explicit type annotation with with --isolatedDeclarations
!!! related TS9600 isolatedDeclarationErrors.ts:7:7: Add a type annotation to the variable errorOnMissingReturn
!!! related TS9603 isolatedDeclarationErrors.ts:7:30: Add a return type to the function expression
    errorOnMissingReturn.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9009: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    